# calcipy_template

./: .calcipy.json  .gitignore  .pre-commit-config.yaml  .prekignore  .ruff.toml  CHANGELOG.md  CTT_TESTING.md  MIGRATION.md  README.md  copier.yml  ctt.toml  mise.toml  pyproject.toml  rm_actions.sh  sync_pyproject.py  sync_with_ctt.sh
.ctt/default/: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  .tool-versions  LICENSE  README.md  _copier_post_generation.json  _copier_post_generation.py  dodo.py  mise.toml  mkdocs.yml  pyproject.toml  run
.ctt/default/.github/: PULL_REQUEST_TEMPLATE.md
.ctt/default/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.ctt/default/.github/actions/setup/: action.yml
.ctt/default/.github/workflows/: ci_pipeline.yml  codeql-analysis.yml  labeler.yml  publish.yml  update_docs.yml  upgrade-dependencies.yml
.ctt/default/docs/: CNAME  README.md  gen_ref_nav.py
.ctt/default/docs/docs/: DEVELOPER_GUIDE.md  STYLE_GUIDE.md
.ctt/default/scripts/: check_imports.py
.ctt/default/test_template/: __init__.py  _runtime_type_check_setup.py
.ctt/default/tests/: __init__.py  configuration.py  test_zz_test_template.py
.ctt/no_docs/: .copier-answers.yml  .flake8  .pylintrc  .sourcery.yaml  .tool-versions  LICENSE  README.md  _copier_post_generation.py  dodo.py  mkdocs.yml  pyproject.toml  ruff.toml
.ctt/no_docs/test_template/: __init__.py  scripts.py
.ctt/no_docs/tests/: __init__.py  test_zz_test_template.py
.github/: dependabot.yml
.github/workflows/: bump_version.yml
docs/docs/: CODE_TAG_SUMMARY.md
docs/superpowers/plans/: 2026-04-15-cdnjs-update-system.md
package_template/: .flake8.jinja  .gitignore.jinja  .isort.cfg.jinja  .mypy.ini.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .pylintrc.jinja  .pyup.yml.jinja  .ruff.toml.jinja  .sourcery.yaml  .sourcery.yaml.jinja  .tool-versions.jinja  README.md.jinja  _copier_post_generation.json.jinja  _copier_post_generation.py  _copier_post_generation.py.jinja  _poetry_to_uv_migration.py  appveyor.yml.jinja  dodo.py.jinja  mise.toml  mise.toml.jinja  mkdocs.yml.jinja  mypy.ini.jinja  noxfile.py  pyproject.toml.jinja  remove-if-found.txt.jinja  ruff.toml  ruff.toml.jinja  run.jinja  {% if include_all %}mkdocs.yml.jinja{% endif %}  {{ _copier_conf.answers_file }}.jinja
package_template/.github/: PULL_REQUEST_TEMPLATE.md.jinja  README.md
package_template/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.md.jinja  feature_request.md.jinja  question.md.jinja
package_template/.github/actions/setup/: action.yml.jinja
package_template/.github/workflows/: ci_pipeline.yml.jinja  codeql-analysis.yml.jinja  labels.yml  publish.yml.jinja  update_docs.yml  update_docs.yml.jinja  upgrade-dependencies.yml  upgrade-dependencies.yml.jinja
package_template/docs/: CODE_OF_CONDUCT.md.jinja  README.md.jinja
package_template/docs/docs/: CODE_TAG_SUMMARY.md
package_template/scripts/: check_imports.py.jinja
package_template/tests/: __init__.py.jinja  configuration.py  configuration.py.jinja  conftest.py  test_zz_{{ package_name_py }}.py.jinja
package_template/{% if include_all %}.github{% endif %}/: PULL_REQUEST_TEMPLATE.md.jinja
package_template/{% if include_all %}.github{% endif %}/actions/setup/: action.yml.jinja
package_template/{% if include_all %}.github{% endif %}/workflows/: ci_pipeline.yml.jinja  codeql-analysis.yml.jinja  update_docs.yml.jinja  upgrade-dependencies.yml.jinja
package_template/{% if include_all %}scripts{% endif %}/: check_imports.py.jinja
package_template/{% if include_all %}{{ doc_dir }}{% endif %}/: README.md.jinja  gen_ref_nav.py.jinja
package_template/{% if include_all %}{{ doc_dir }}{% endif %}/docs/: Advanced_Documentation.md  DEVELOPER_GUIDE.md.jinja
package_template/{{ doc_dir }}/: README.md.jinja  gen_ref_nav.py.jinja
package_template/{{ doc_dir }}/docs/: DEVELOPER_GUIDE.md.jinja  STYLE_GUIDE.md.jinja
package_template/{{ package_name_py }}/: __init__.py.jinja  _runtime_type_check_setup.py  _runtime_type_check_setup.py.jinja  {% if extends_calcipy %}scripts.py{% endif %}  {% if extends_copier %}scripts.py{% endif %}
package_template/{{doc_dir}}/: CNAME.jinja  DEVELOPER_GUIDE.md.jinja  README.md.jinja  SECURITY.md.jinja
package_template/{{doc_dir}}/docs/: CODE_OF_CONDUCT.md.jinja  DEVELOPER_GUIDE.md.jinja  STYLE_GUIDE.md
scripts/: check_cdnjs_updates.py
