[tool.commitizen]
version = "1.10.2"
version_files = ["pyproject.toml:^version"]

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
description = "Project scaffold for Python packages built on calcipy. Utilizes copier to keep projects up to date"
name = "calcipy_template"
version = "1.10.2"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["python"]
trailing_comma_inline_array = true
