[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.calcipy.test]
pythons = ["3.7"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml", "test_template/__init__.py"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "test_template"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.poetry]
name = "test_template"
version = "0.0.1"
description = "Test minimal template configuration"
license = "MIT"
authors = ["Carl the Template <ctt@ctt.ctt>"]
maintainers = []
repository = "https://github.com/org_ctt/test_template"
documentation = "https://test_template.kyleking.me"
readme = "docs/README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/org_ctt/test_template/issues"
"Changelog" = "https://github.com/org_ctt/test_template/blob/main/docs/docs/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7.12"
calcipy = ">=0.21.3"

[tool.poetry.dev-dependencies]
calcipy = { version = "*", extras = ["dev", "lint", "test"] }
